export const snapshot = {};

snapshot[`parseNoteType() > not found 1`] = `
{
  ok: false,
  value: {
    message: "No note type settings found in the page.",
    name: "NoteTypeNotFoundError",
  },
}
`;

snapshot[`parseNoteType() > found 1`] = `
{
  ok: true,
  value: {
    css: "
.card {
  display: flex;
  justify-content: center;
  font-family: arial;
  font-size: 20px;
  color: black;
  background-color: white;
}
.cloze {
  font-weight: bold;
  color: blue;
}
.nightMode .cloze {
  color: lightblue;
}",
    fields: [
      {
        description: "問題文",
        name: "Text",
      },
      {
        name: "Description",
      },
      {
        description: "問題の取得元URL",
        name: "SourceURL",
      },
    ],
    id: 343480954545,
    isCloze: true,
    name: "システム英単語用穴埋め問題",
    templates: [
      {
        answer: '
{{cloze:Text}}
<hr>
{{Description}}
<a href="{{SourceURL}}">source</a>',
        name: "Card 1",
        question: "
{{cloze:Text}}
{{type:Text}}",
      },
    ],
    updated: 1693465105,
  },
}
`;

snapshot[`parseNoteType() > splitted 1`] = `
{
  ok: false,
  value: {
    message: "Expected double-quoted property name in JSON at position 121",
    name: "InvalidNoteTypeError",
  },
}
`;
